--- a/q/274225.html
+++ b/q/274225.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Raku</td><td>240718T132936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274243#274243">Ven</a></td></tr>
-<tr d-ix="1"><td>096</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
+<tr d-ix="0"><td>096</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Raku</td><td>240718T132936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274243#274243">Ven</a></td></tr>
 <tr d-ix="2"><td>136</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
 <tr d-ix="3"><td>016</td><td>Haskell + hgl</td><td>240718T115820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274241#274241">Wheat Wi</a></td></tr>
 <tr d-ix="4"><td>008</td><td>Jelly</td><td>240718T104737Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274240#274240">Jonathan</a></td></tr>
@@ -38,21 +38,28 @@
 <tr d-ix="9"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="10"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 41 bytes</h1>
-
-<pre class="lang-perl6 prettyprint-override"><code>*.permutations.min:{([\+] @$_)&gt;&gt;.abs.max}
-</code></pre>
-<p><code>[\+]</code> is the cumulative sum (<code>+\</code> in APL).
-<code>&gt;&gt;.</code> acts like <code>.map{}</code> (in theory, it might be parallelized, but its results are guaranteed to be in order).</p>
-<p><a href="https://tio.run/##K0gtyjH7n1upoJZm@19LryC1KLe0JLEkMz@vWC83M8@qWiM6RjtWwUElXtPOTi8xCSiaWFH737o4sVIhTUPDUMdIx1hH10RH11RT8z8A" rel="nofollow noreferrer" title="Perl 6 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 96 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 96 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a:min(permutations(a),key=lambda a,i=0:max(abs(i:=i+x)for x in a))
 from itertools import*
 </code></pre>
 <p><a href="https://tio.run/##NY/dboMwDEbveQrfNdmciQ06MaRU2nMwLlI1CKv5UwgbPD0LVL2J5PMdx3ZY0@hd1YS4DfJnM8pebwpUa8mxoKOdk0rk3cQUx7te5VNAkmVr1cLUdWLUSnpd@OAjLEAOFOfFEL0FSjom780EZIOP6WXbHUNO75oP2rGStwXkKoAE/asM29O3KRhK7CQvJ96VPc9GiOQSG1g2Od@6d/zACms89yAvwL7dCj7edORFJ84oajyEIzzcTCoU2WZ5AZ9GHWHyZj5ugz9KI@TZs4Zq/6DB@tFZo2j6DL4QaoT8is9nADt8kH8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>-45 bytes thanks to Jonathan Allan</p>
+<hr />
+<h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 104 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda a:a and min((f((a:=a[1:]+[x])[:-1])+[x]for x in a),key=lambda b,i=0:max(abs(i:=i+y)for y in b))
+</code></pre>
+<p><a href="https://tio.run/##NY5BbsMgEEX3OcXsAspQ2bVTuUhE6jkQCyxjBcUGhElrn94FR1kMmv//m2HClu7eNV2I@z6KSc/9oEHzXG6A2TpCRkI0F1rWXF3kqqjkrFa0tKOPsIJ1oCk@zPae7tGKis96JbpfiOXCXjZa2K2wPaV7EZN1pmgfjCMV5SfIKoAA86snUtKPJUw2kbO4namsFM1EiNalfFEm8xpZ4yc22OJVgbgB@XEb@DiYSE@SXZG1eABHeLDZaZBlmuQDfLqbCIufnsl6t8CfTXfIfz8NNGVBh@1rskXWqWx8I7QI@WVf7wCK@XL@AQ" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>Solution without <code>itertools</code></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 41 bytes</h1>
+
+<pre class="lang-perl6 prettyprint-override"><code>*.permutations.min:{([\+] @$_)&gt;&gt;.abs.max}
+</code></pre>
+<p><code>[\+]</code> is the cumulative sum (<code>+\</code> in APL).
+<code>&gt;&gt;.</code> acts like <code>.map{}</code> (in theory, it might be parallelized, but its results are guaranteed to be in order).</p>
+<p><a href="https://tio.run/##K0gtyjH7n1upoJZm@19LryC1KLe0JLEkMz@vWC83M8@qWiM6RjtWwUElXtPOTi8xCSiaWFH737o4sVIhTUPDUMdIx1hH10RH11RT8z8A" rel="nofollow noreferrer" title="Perl 6 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 136 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x)(~x)[order(apply(~x,1,\(v)max(abs(cumsum(v)))))[1],]
