--- a/q/274270.html
+++ b/q/274270.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>Uiua</td><td>240720T013416Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274285#274285">nyxbird</a></td></tr>
-<tr d-ix="1"><td>027</td><td>Haskell</td><td>240720T004857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274284#274284">xnor</a></td></tr>
-<tr d-ix="2"><td>031</td><td>Python 3.8 prerelease</td><td>240720T002041Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274281#274281">squarero</a></td></tr>
-<tr d-ix="3"><td>015</td><td>Wolfram Language Mathematica</td><td>240720T004150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274283#274283">138 Aspe</a></td></tr>
-<tr d-ix="4"><td>044</td><td>Setanta</td><td>240720T001539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274280#274280">bb94</a></td></tr>
-<tr d-ix="5"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Charcoal</td><td>240719T235752Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274279#274279">Neil</a></td></tr>
+<tr d-ix="1"><td>007</td><td>Uiua</td><td>240720T013416Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274285#274285">nyxbird</a></td></tr>
+<tr d-ix="2"><td>027</td><td>Haskell</td><td>240720T004857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274284#274284">xnor</a></td></tr>
+<tr d-ix="3"><td>031</td><td>Python 3.8 prerelease</td><td>240720T002041Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274281#274281">squarero</a></td></tr>
+<tr d-ix="4"><td>015</td><td>Wolfram Language Mathematica</td><td>240720T004150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274283#274283">138 Aspe</a></td></tr>
+<tr d-ix="5"><td>044</td><td>Setanta</td><td>240720T001539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274280#274280">bb94</a></td></tr>
 <tr d-ix="6"><td>016</td><td>Arturo</td><td>240719T235648Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274278#274278">chunes</a></td></tr>
 <tr d-ix="7"><td>034</td><td>Google Sheets</td><td>240719T220307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274272#274272">doubleun</a></td></tr>
 <tr d-ix="8"><td>002</td><td>Jelly</td><td>240719T223137Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274277#274277">Unrelate</a></td></tr>
@@ -41,52 +41,7 @@
 <tr d-ix="12"><td>027</td><td>JavaScript ES6</td><td>240719T220621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274273#274273">Arnauld</a></td></tr>
 <tr d-ix="13"><td>002</td><td>NARS2000</td><td>240719T213649Z</td><td><a href="https://codegolf.stackexchange.com/questions/274270/check-if-two-lists-are-permutations-of-each-other/274271#274271">RubenVer</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 7 bytes</h1>
-<pre><code>≍∩(⊏⍏.)
-</code></pre>
-<pre><code>  (⊏⍏.) # sort
- ∩       # both inputs
-≍        # and check if they're equal
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 27 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>g=sum.map(65^)
-a%b=g a==g b
-</code></pre>
-<p><a href="https://tio.run/##HY3BCsIwDIbve4ocFFqI4mrdLvYRfIISIYUxh@sYtt5895r2Ej7@JP/34vSe1rWU2aVvPEfe1XB76o6Pwc3ATkYoeUo5gQOv/AV7NHhFS@gNWiFJSCMo30tUUbWFxZEQBEfBocX109Sj2kGausjLJrUifcD@WbYMB/Bi/inGoO@n5qXyBw" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
-<p>Converts the element counts of each list to base 65 by summing <code>65^n</code> for each element <code>n</code>, and compares the results. Base 65 works because the lists are guaranteed to have 64 elements max. We're also assuming there are no negative values.</p>
-<p>Haskell is an interesting language for this challenge because sorting is locked behind a costly import.</p>
-<p><strong>35 bytes</strong></p>
-
-<pre class="lang-hs prettyprint-override"><code>import Data.List
-a%b=sort a==sort b
-</code></pre>
-<p><a href="https://tio.run/##JY2xDgIhDIb3e4oOmkBSjYfEW2Rz1CcgDCW5ROJxRw5G3x0LTv3ytf3/N@XPvCy1hpi2vcCDCp2fIZeBjt7kpsj8p69lziWDASvsBUdUeEXt0CrUTGycRBB2ZNVQ9IXGySEwToy3rtunakctw0k3RAorx0ZKL0h7WAscwHL/VxB6eT/1Xld/" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 21 </s> 31 bytes</h1>
-<p><em>+10 bytes due to a bug regarding duplicate items, thanks to chunes.</em></p>
-
-<pre class="lang-python prettyprint-override"><code>lambda a,b:sorted(a)==sorted(b)
-</code></pre>
-<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSFRJ8mqOL@oJDVFI1HT1hbKTNL8X1CUmVeikaYRbaqjYKSjYK6jYKijYBqroxAN5JmCEVDAPFZT8z8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<h2>Explanation</h2>
-<pre class="lang-python prettyprint-override"><code>lambda a,b:                       # Anonymous lambda function
-           sorted(a)  sorted(b)   # Sort a and b
-                    ==            # Check to see if they're equal
-</code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 15 bytes</h1>
-<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7PzgxNzXQwSE4v6hE30FZ7b@GlkJIanGJQnJicaqCoYKWJld1tYGOoY6RjrGOSa1OtZGOCZAFFKlVqNXXV0hTABIBRZl5JUCN/qUlBaUlVgohRaWpIJ1cKIYZQQwDGWCiYw42yhzIMqutVcBlkFtiTjEWk4whJhkCzTCE6cbjjv8A" rel="nofollow noreferrer">Try it online!</a></p>
-<pre><code>SameQ@@Sort/@#&amp;
-</code></pre>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 44 bytes</h1>
-<pre><code>gniomh(a,b){toradh sortail@a()==sortail@b()}
-</code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIqZORCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⬤⁺θη⁼№θι№ηι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0cjIKe0WKNQRyFDU0fBtbA0MadYwzm/FCgJFMsEikE4GSAOEFj//x8dbaBjqGOkY6xjomMQqxNtpGMAZBkDScPY2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the two inputs are permutations, nothing if not. Explanation:</p>
@@ -103,6 +58,67 @@ a%b=sort a==sort b
          η  In second input
             Implicitly print
 </code></pre>
+<p>9 bytes to port @WheatWizard's approach:</p>
+<pre><code>⁼ΣＸφθΣＸφη
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMO1sDQxp1gjuDRXIyC/PLVII01HoVBTU0cBRSRDEwis//@PjjbQMdQx0jHWMdExiNWJNtIxALKMgaRhbOx/3bIcAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Assumes all inputs are non-negative integers and no integer appears more than <code>999</code> times and outputs a Charcoal boolean, i.e. <code>-</code> if the two inputs are permutations, nothing if not. Explanation:</p>
+<pre><code>   φ        Predefined variable `1000`
+  Ｘ         Vectorised raised to power
+    θ       First input
+ Σ          Take the sum
+⁼           Equals
+       φ    Predefined variable `1000`
+      Ｘ     Vectorised raised to power
+        η   Second input
+     Σ      Take the sum
+            Implicitly print
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 7 bytes</h1>
+<pre><code>≍∩(⊏⍏.)
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__ZiDihpAg4omN4oipKOKKj-KNjy4pCmYgWzAgMSAyIDMgNF0gWzIgNCAzIDAgMV0KZiBbMiA0IDQgN10gWzIgNyA0IDZdCmYgWzFdIFsxXQo=" rel="nofollow noreferrer">try it!</a></p>
+<pre><code>  (⊏⍏.) # sort
+ ∩       # both inputs
+≍        # and check if they're equal
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 27 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>g=sum.map(65^)
+a%b=g a==g b
+</code></pre>
+<p><a href="https://tio.run/##HY3BCsIwDIbve4ocFFqI4mrdLvYRfIISIYUxh@sYtt5895r2Ej7@JP/34vSe1rWU2aVvPEfe1XB76o6Pwc3ATkYoeUo5gQOv/AV7NHhFS@gNWiFJSCMo30tUUbWFxZEQBEfBocX109Sj2kGausjLJrUifcD@WbYMB/Bi/inGoO@n5qXyBw" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p>Converts the element counts of each list to base 65 by summing <code>65^n</code> for each element <code>n</code>, and compares the results. Base 65 works because the lists are guaranteed to have 64 elements max. We're also assuming there are no negative values.</p>
+<p>Haskell is an interesting language for this challenge because sorting is locked behind a costly import.</p>
+<p><strong>35 bytes</strong></p>
+
+<pre class="lang-hs prettyprint-override"><code>import Data.List
+a%b=sort a==sort b
+</code></pre>
+<p><a href="https://tio.run/##JY2xDgIhDIb3e4oOmkBSjYfEW2Rz1CcgDCW5ROJxRw5G3x0LTv3ytf3/N@XPvCy1hpi2vcCDCp2fIZeBjt7kpsj8p69lziWDASvsBUdUeEXt0CrUTGycRBB2ZNVQ9IXGySEwToy3rtunakctw0k3RAorx0ZKL0h7WAscwHL/VxB6eT/1Xld/" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 21 </s> 31 bytes</h1>
+<p><em>+10 bytes due to a bug regarding duplicate items, thanks to chunes.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>lambda a,b:sorted(a)==sorted(b)
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUSFRJ8mqOL@oJDVFI1HT1hbKTNL8X1CUmVeikaYRbaqjYKSjYK6jYKijYBqroxAN5JmCEVDAPFZT8z8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<h2>Explanation</h2>
+<pre class="lang-python prettyprint-override"><code>lambda a,b:                       # Anonymous lambda function
+           sorted(a)  sorted(b)   # Sort a and b
+                    ==            # Check to see if they're equal
+</code></pre>
+</div>
+<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 15 bytes</h1>
+<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7PzgxNzXQwSE4v6hE30FZ7b@GlkJIanGJQnJicaqCoYKWJld1tYGOoY6RjrGOSa1OtZGOCZAFFKlVqNXXV0hTABIBRZl5JUCN/qUlBaUlVgohRaWpIJ1cKIYZQQwDGWCiYw42yhzIMqutVcBlkFtiTjEWk4whJhkCzTCE6cbjjv8A" rel="nofollow noreferrer">Try it online!</a></p>
+<pre><code>SameQ@@Sort/@#&amp;
+</code></pre>
+</div>
+<div id="pu5" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 44 bytes</h1>
+<pre><code>gniomh(a,b){toradh sortail@a()==sortail@b()}
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIqZORCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 16 bytes</h1>
 <pre><code>$=&gt;[=sort&amp;sort&amp;]
