--- a/q/274225.html
+++ b/q/274225.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>193</td><td>Setanta</td><td>240720T212816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274300#274300">bb94</a></td></tr>
+<tr d-ix="0"><td>191</td><td>Setanta</td><td>240720T212816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274300#274300">bb94</a></td></tr>
 <tr d-ix="1"><td>031</td><td>J</td><td>240720T055517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274290#274290">noodle p</a></td></tr>
 <tr d-ix="2"><td>093</td><td>Python 3</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
 <tr d-ix="3"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
@@ -42,11 +42,11 @@
 <tr d-ix="13"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="14"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>225</s> 193 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>225</s> <s>193</s> <s>192</s> 191 bytes</h1>
 <p>Another brute-force solution, but in a language without a permutation builtin.</p>
-<pre><code>gniomh(l){s:=eas@mata(999)p:=0k:=fad@l gniomh f(v,w,n,m){ma fad@v&lt;k{le i idir(0,k){ma aimsigh@v(i)&lt;0{N:=n+l[i]f(v+[i],w+[N-n],N,uas(dearbh@mata(N),m))}}}no ma m&lt;s{p=w s=m}}f([],[],0,0)toradh p}
+<pre><code>gniomh(l){s:=eas@mata(999)p:=0gniomh f(v,w,n,m){ma fad@v&lt;fad@l le i idir(0,fad@l){ma aimsigh@v(i)&lt;0{N:=l[i]f(v+[i],w+[N],n+N,uas(dearbh@mata(n+N),m))}}no ma m&lt;s{p=w s=m}}f([],[],0,0)toradh p}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDIsr6LCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDw-8aKCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>37</s> 31 bytes</h1>
 <pre><code>0{[:(/:[:&gt;./[:|+/\@|:)i.@!@#A.]
