--- a/q/210107.html
+++ b/q/210107.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>226</td><td>Setanta</td><td>200826T112706Z</td><td><a href="https://codegolf.stackexchange.com/questions/210107/stroke-count-of-a-chinese-numeral/210194#210194">bb94</a></td></tr>
+<tr d-ix="0"><td>222</td><td>Setanta</td><td>200826T112706Z</td><td><a href="https://codegolf.stackexchange.com/questions/210107/stroke-count-of-a-chinese-numeral/210194#210194">bb94</a></td></tr>
 <tr d-ix="1"><td>151</td><td>Python 2</td><td>200825T102651Z</td><td><a href="https://codegolf.stackexchange.com/questions/210107/stroke-count-of-a-chinese-numeral/210121#210121">Sisyphus</a></td></tr>
 <tr d-ix="2"><td>139</td><td>JavaScript ES6</td><td>200825T105013Z</td><td><a href="https://codegolf.stackexchange.com/questions/210107/stroke-count-of-a-chinese-numeral/210125#210125">Arnauld</a></td></tr>
 <tr d-ix="3"><td>059</td><td>05AB1E</td><td>200825T131829Z</td><td><a href="https://codegolf.stackexchange.com/questions/210107/stroke-count-of-a-chinese-numeral/210138#210138">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://try-setanta.ie/" rel="nofollow noreferrer">Setanta</a>, <s>243</s> <s>236</s> <s>235</s> <s>234</s> 226 bytes</h2>
-<pre><code>gniomh(n){gniomh S(n,c){gniomh Q(t){toradh t|0&amp;1}toradh(n&amp;[13,1,2,3,5,4,4,2,2,2][n%10]+[0,2,6,3][n%10&amp;c%4]+3*Q((c==4|c==8)&amp;n%10000)-13*(Q(n%10==0&amp;c%4==0)+Q(n%100==0&amp;c%4!=3))-Q(n==1&amp;c%4==1)+S(n//10,c+1))|13*Q(!c)}toradh S(n,0)}
+<div id="pu0" class="pu"><h2><a href="https://try-setanta.ie/" rel="nofollow noreferrer">Setanta</a>, <s>243</s> <s>236</s> <s>235</s> <s>234</s> <s>226</s> 222 bytes</h2>
+<pre><code>gniomh(n){gniomh S(n,c){gniomh Q(t){toradh t|0&amp;1}toradh(n&amp;[13,1,2,3,5,4,4,2,2,2][n%10]+[0,2,6,3][n%10&amp;c%4]+3*Q((c==4|c==8)&amp;n%10000)-13*(Q(!(n%10|c%4))+Q(n%100==0&amp;c%4&lt;3))-Q(n==1&amp;c%4==1)+S(n//10,c+1))|13*Q(!c)}toradh S(n,0)}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIy7KTCw" rel="nofollow noreferrer">Try it here!</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDwxaCZCw" rel="nofollow noreferrer">Try it here!</a></p>
 <p>Notes:</p>
 <ul>
 <li>This is a port of the <a href="https://codegolf.stackexchange.com/a/210121/14109">Python 2 solution</a>.</li>
